--- a/portfolio.html
+++ b/portfolio.html
@@ -10,5 +10,7 @@
  <center><a href="index.html">Back To Main Page</center></a>
       <p></p>
 <center><a href="https://scratch.mit.edu/projects/328531631" target="_blank">Scratch 1.1.7 Project!</a></center>
-</body>
+      <p></p>
+      <center><a href="http://ai2.appinventor.mit.edu/#5467523229810688" target="_blank">MIT App Inventor Project!</a></center>
+      </body>
 </html>
