--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,6 @@
       <p></p>
 <center><a href="https://scratch.mit.edu/projects/328531631" target="_blank">Scratch 1.1.7 Project!</a></center>
       <p></p>
-      <center><a href="http://ai2.appinventor.mit.edu/#5467523229810688" target="_blank">MIT App Inventor Project!</a></center>
+      <center><img src="mouse.PNG" alt="Code"></center>
       </body>
 </html>
