--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,6 @@
       <p></p>
 <center><a href="https://scratch.mit.edu/projects/328531631" target="_blank">Scratch 1.1.7 Project!</a></center>
       <p></p>
-      <center><img src="mouse.PNG" alt="Code"></center>
+      <center><img src="mouse.PNG" width="1890" height="1080" alt="Code"></center>
       </body>
 </html>
