--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
  <center><a href="index.html">Back To Main Page</center></a>
       <p></p>
 <center><a href="https://scratch.mit.edu/projects/328531631" target="_blank">Scratch 1.1.7 Project!</a></center>
-      <p></p>
+      <p><center><title>MIT APP INVENTOR PROJECT</title></center></p>
       <center><img src="mouse.PNG" width="1890" height="1080" alt="Code"></center>
       </body>
 </html>
