--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
  <center><a href="index.html">Back To Main Page</center></a>
       <p></p>
 <center><a href="https://scratch.mit.edu/projects/328531631" target="_blank">Scratch 1.1.7 Project!</a></center>
-      <center><h2>MIT APP Inventor Project: A Game where you click the bullets to save the ducks!</h2></center>
+<h2>MIT APP Inventor Project: A Game where you click the bullets to save the ducks!</h2>
       <center><img src="mouse.PNG" width="1890" height="1080" alt="Code"></center>
       </body>
 </html>
