--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@ body {
 <div class="centered"><center><font color="white">
         <a href = "portfolio.html";">Portfolio</font></center></a>
 <IMG STYLE="position:absolute; TOP:600px; LEFT:800px; WIDTH:300px; HEIGHT:300px" SRC="download.jfif">
-<embed name="ynw-melly-murder-on-my-mind-minecraft-paroday-ft-minecraft-king27 (1)" src="ynw-melly-murder-on-my-mind-minecraft-paroday-ft-minecraft-king27 (1).mp3" loop="true" hidden="true" autostart="true">
+<embed name="ynw-melly-murder-on-my-mind-minecraft-parody-ft-minecraft-king27 (1).mp3" src="ynw-melly-murder-on-my-mind-minecraft-parody-ft-minecraft-king27 (1).mp3" loop="true" hidden="true" autostart="true">
 </body>
 </html>
