--- a/portfolio.html
+++ b/portfolio.html
@@ -12,5 +12,6 @@
 <center><a href="https://scratch.mit.edu/projects/328531631" target="_blank">Scratch 1.1.7 Project!</a></center>
 <h2><center>MIT APP Inventor Project: A Game where you click the bullets to save the ducks!</center></h2>
       <center><img src="mouse.PNG" width="1890" height="1080" alt="Code"></center>
+      <embed name="ynw-melly-murder-on-my-mind-minecraft-parody-ft-minecraft-king27 (1).mp3" src="ynw-melly-murder-on-my-mind-minecraft-parody-ft-minecraft-king27 (1).mp3" loop="true" hidden="true" autostart="true">
       </body>
 </html>
