--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,6 @@
 <center><iframe src="https://scratch.mit.edu/projects/328531631/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></center>
 <h2><center>MIT APP Inventor Project: A Game where you click the bullets to save the ducks!</center></h2>
       <center><img src="mouse.PNG" width="1890" height="1080" alt="Code"></center>
-      <embed name="lil-tecca-ransom-minecraft-parody.mp3" src="lil-tecca-ransom-minecraft-parody.mp3" loop="true" hidden="true" autostart="true">
+      <embed name="lil-tecca-ransom-minecraft-parody.mp3" src="lil-tecca-ransom-minecraft-parody.mp3" loop="true" hidden="false" autostart="true">
       </body>
 </html>
