--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,6 @@
 <h2><center>MIT APP Inventor Project: A Game where you click the bullets to save the ducks!</center></h2>
       <center><img src="mouse.PNG" width="1890" height="1080" alt="Code"></center>
       <embed name="lil-tecca-ransom-minecraft-parody.mp3" src="lil-tecca-ransom-minecraft-parody.mp3" loop="true" hidden="false" autostart="true">
-   <center><iframe height="400px" width="100%" src="https://repl.it/@Drewbacca/GameTravelTIme?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe></center>
+      <center><a href="https://repl.it/@Drewbacca/GameTravelTIme">Repl.it Game Time Travel Tragedy</a></center>
       </body>
 </html>
