--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@ body {
 <p></p>
 <div class="centered"><center><font color="white">
         <a href = "portfolio.html";">Portfolio</font></center></a>
+	<ul>
+  <li><a class="active" href="https://drewbaccacode.github.io/index/index.html">Home</a></li>
+  <li><a href="portfolio.html">Portfolio</a></li>
+  <li><a href="aboutmel.html">About Me</a></li>
+</ul>
 <IMG STYLE="position:absolute; TOP:600px; LEFT:800px; WIDTH:300px; HEIGHT:300px" SRC="download.jfif">
 <embed name="ynw-melly-murder-on-my-mind-minecraft-parody-ft-minecraft-king27 (1).mp3" src="ynw-melly-murder-on-my-mind-minecraft-parody-ft-minecraft-king27 (1).mp3" loop="true" hidden="true" autostart="true">
 </body>
