--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
       <h4><center>Here is my Repl.it Project</center></h4>
       <center><a href="https://repl.it/@Drewbacca/GameTravelTIme">Repl.it Game Time Travel Tragedy</a></center>
       <embed name="all-star-by-smashmouth-but-its-sung-by-kermit.mp3" src="all-star-by-smashmouth-but-its-sung-by-kermit.mp3" loop="true" hidden="false" autostart="true">
-      
+      <center><img src="1st.PNG" width="1890" height="1080" alt="Code"></center>
+      <center><img src="2nd.PNG" width="1890" height="1080" alt="Code"></center>
       </body>
 </html>
