--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
 
     <!-- This is the tab icon -->
-    <link rel="shortcut icon" href="images/github-avatar.ico">
+    <link rel="shortcut icon" href="wcat.jpg">
 
     <!-- Material Design for Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -28,7 +28,7 @@
 <body style="background:#000;"><nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1C74A6">
     <img src="images/mylogo-web.png" height="50px" width="50px" style="padding:10px">
     <a class="navbar-brand" href="#">
-                    JavaCafe01
+                    Drew's Website
                   </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="portfolio.html">Projects</a>
-            <a class="nav-item nav-link" href="aboutme.html">About</a>
+            <a class="nav-item nav-link" href="aboutme.html">About Me</a>
         </div>
     </div>
 </nav>
