--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body style="background:#000;"><nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1C74A6">
-    <img src="images/mylogo-web.png" height="50px" width="50px" style="padding:10px">
+    <img src="wcat.jpg" height="50px" width="50px" style="padding:10px">
     <a class="navbar-brand" href="#">
                     Drew's Website
                   </a>
