--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="theme-color" content="#1C74A6">
+    <meta name="theme-color" content="#4169e1">
 
     <!-- Star Script -->
     <script src="js/starfield.js"></script>
@@ -25,7 +25,7 @@
 
 </head>
 
-<body style="background:#000;"><nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1C74A6">
+<body style="background:#000;"><nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #4169e1">
     <img src="wcat.jpg" height="50px" width="50px" style="padding:10px">
     <a class="navbar-brand" href="#">
                     Drew's Website
