--- a/portfolio.html
+++ b/portfolio.html
@@ -3,11 +3,26 @@
 <head>
 <title>Page Title</title>
 </head>
-<body>
+
+  <body style="background:#000;"><nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #4169e1">
+    <img src="wcat.jpg" height="50px" width="50px" style="padding:10px">
+    <a class="navbar-brand" href="#">
+                    Drew's Website
+                  </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="portfolio.html">Projects</a>
+            <a class="nav-item nav-link" href="aboutme.html">About Me</a>
+        </div>
+    </div>
+</nav>    
+      
 <body bgcolor="#f7f7e9">
-<h1><center><font color="Blue">Portfolio</font></center></h1>
-      <center><p><b><font color="green">Links</p></b></center>
- <center><a href="index.html">Back To Main Page</center></a>
+<h1><center><font color="Blue">Portfolio</font></center></h1>  
       <h3><center>Scratch Project Very Cool!</center></h3>
 <center><iframe src="https://scratch.mit.edu/projects/328531631/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></center>
 <h2><center>MIT APP Inventor Project: A Game where you click the bullets to save the ducks!</center></h2>
