--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,30 @@
 ﻿<!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
+<html lang="en"><head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <body style="background:#000;"><nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #4169e1">
+    <meta name="theme-color" content="#4169e1">
+
+    <!-- Star Script -->
+    <script src="js/starfield.js"></script>
+
+    <!-- My Style Sheet -->
+    <link rel="stylesheet" href="css/mainstyles.css">
+
+    <!-- Material Design for Bootstrap fonts and icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
+
+    <!-- This is the tab icon -->
+    <link rel="shortcut icon" href="wcat.jpg">
+
+    <!-- Material Design for Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+
+</head>
+  <body style="background:#000;"><nav class="navbar navbar-expand-lg navbar-dark" style="background-color: blue">
     <img src="wcat.jpg" height="50px" width="50px" style="padding:10px">
     <a class="navbar-brand" href="#">
                     Drew's Website
