--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
 </head>
-  <body style="background:#000;"><nav class="navbar navbar-expand-lg navbar-dark" style="background-color: blue">
+  <body style="background:#FFF;"><nav class="navbar navbar-expand-lg navbar-dark" style="background-color: blue">
     <img src="wcat.jpg" height="50px" width="50px" style="padding:10px">
     <a class="navbar-brand" href="#">
                     Drew's Website
