--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body style="background:#000;"><nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #4169e1">
+<body style="background:#FFF;"><nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #4169e1">
     <img src="wcat.jpg" height="50px" width="50px" style="padding:10px">
     <a class="navbar-brand" href="#">
                     Drew's Website
@@ -42,7 +42,7 @@
     </div>
 </nav>
 
-    <h1> Hello World! </h1>
+    <center><h1> Hello World! </h1></center>
 
     <canvas id="starfieldCanvas" width="1365" height="969"></canvas>
 
