--- a/aboutme.html
+++ b/aboutme.html
@@ -1,11 +1,52 @@
 ﻿<!DOCTYPE html>
-<html>
-<head>
+<html lang="en"><head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <meta name="theme-color" content="blue">
+
+    <!-- Star Script -->
+    <script src="js/starfield.js"></script>
+
+    <!-- My Style Sheet -->
+    <link rel="stylesheet" href="css/mainstyles.css">
+
+    <!-- Material Design for Bootstrap fonts and icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
+
+    <!-- This is the tab icon -->
+    <link rel="shortcut icon" href="wcat.jpg">
+
+    <!-- Material Design for Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <title>Home</title>
+
+</head>
+
+<body style="background:#FFF;"><nav class="navbar navbar-expand-lg navbar-dark" style="background-color: blue">
+    <img src="wcat.jpg" height="50px" width="50px" style="padding:10px">
+    <a class="navbar-brand" href="#">
+                    Drew's Website
+                  </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="portfolio.html">Projects</a>
+            <a class="nav-item nav-link" href="aboutme.html">About Me</a>
+        </div>
+    </div>
+</nav>
 <title>Page Title</title>
 </head>
 <body>
 <body bgcolor="#f7f7e9">
-<h1><center><font color="red">About Me</font></center></h1>
+<h1><center><font color="gray">About Me</font></center></h1>
 <p><center>I am a sophomore in high school at rbhs. I enjoy playing soccer, I also like to travel a lot. I have 2 kittens named Loki and Milo and there so cute. I love riding rollercoasters no matter how scary they are!</center></p>
       <center><p><b><font color="green">Links</p></b></center>
  <center><a href="index.html">Back To Home Page</center></a>
