--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
 <h2><center>MIT APP Inventor Project: A Game where you click the bullets to save the ducks!</center></h2>
       <center><img src="mouse.PNG" width="1890" height="1080" alt="Code"></center>
       <h4><center>Here is my Repl.it Project</center></h4>
-      <center><a href="https://repl.it/@Drewbacca/GameTravelTIme">Repl.it Game Time Travel Tragedy</a></center>
+      <center><iframe height="400px" width="100%" src="https://repl.it/@Drewbacca/GameTravelTIme?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe></center>
       <embed name="all-star-by-smashmouth-but-its-sung-by-kermit.mp3" src="all-star-by-smashmouth-but-its-sung-by-kermit.mp3" loop="true" hidden="false" autostart="true">
       <h5>Here Is My Python Game, I made Battleship. It's an 8 by 8 grid that you guess coordinates to find the ship, if you hit it, you win!</h5>
       <center><img src="1st.PNG" width="1890" height="1080" alt="Code"></center>
