--- a/portfolio.html
+++ b/portfolio.html
@@ -53,6 +53,7 @@
       <h5>Here Is My Python Game, I made Battleship. It's an 8 by 8 grid that you guess coordinates to find the ship, if you hit it, you win!</h5>
       <center><img src="1st.PNG" width="1890" height="1080" alt="Code"></center>
       <center><img src="2nd.PNG" width="1890" height="360" alt="Code"></center>
-      
+    <h6><center>This is my image manipulation project!</center></h6>
+    
       </body>
 </html>
