--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
       <center><img src="1st.PNG" width="1890" height="1080" alt="Code"></center>
       <center><img src="2nd.PNG" width="1890" height="360" alt="Code"></center>
     <h6><center>This is my image manipulation project!</center></h6>
-    <center><img src="image_code.jfif" width="1890" height="1080" alt="Imaga Code"></center>
+    <center><img src="image_code.jfif" height="1080" alt="Image Code"></center>
     <center><img src="image_manipulation.jfif" width="1890" height="1080" alt="Manipulation"></center>
     
       </body>
