--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,8 @@
   </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="portfolio.html">Projects</a>
+            <a class="nav-item nav-link active" href="index.html">Home</a>
+            <a class="nav-item nav-link" href="portfolio.html">Projects<span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="aboutme.html">About Me</a>
         </div>
     </div>
