--- a/aboutme.html
+++ b/aboutme.html
@@ -36,9 +36,9 @@
   </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="index.html">Home</a>
-            <a class="nav-item nav-link" href="portfolio.html">Projects</a>
-            <a class="nav-item nav-link" href="aboutme.html">About Me<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="index.html"><font color="gray">Home</font></a>
+            <a class="nav-item nav-link" href="portfolio.html"><font color="gray">Projects</font></a>
+            <a class="nav-item nav-link" href="aboutme.html"><font color="white">About Me</font><span class="sr-only">(current)</span></a>
         </div>
     </div>
 </nav>
