--- a/portfolio.html
+++ b/portfolio.html
@@ -34,9 +34,9 @@
   </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="index.html">Home</a>
+            <a class="nav-item nav-link active" href="index.html">Home <div class="ripple-container"><div class="ripple-decorator ripple-on ripple-out" style="left: 34.9688px; top: -12px; background-color: rgba(255, 255, 255, 0.75); transform: scale(3.21749);"></div></div></a>
             <a class="nav-item nav-link" href="portfolio.html">Projects<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="aboutme.html">About Me</a>
+            <a class="nav-item nav-link" href="aboutme.html">About Me<div class="ripple-container"><div class="ripple-decorator ripple-on ripple-out" style="left: 36.2188px; top: -11px; background-color: rgba(255, 255, 255, 0.75); transform: scale(3.06575);"></div></div></a>
         </div>
     </div>
 </nav>    
