--- a/portfolio.html
+++ b/portfolio.html
@@ -32,11 +32,11 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="index.html">Home <div class="ripple-container"><div class="ripple-decorator ripple-on ripple-out" style="left: 34.9688px; top: -12px; background-color: rgba(255, 255, 255, 0.75); transform: scale(3.21749);"></div></div></a>
-            <a class="nav-item nav-link" href="portfolio.html">Projects<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="aboutme.html">About Me<div class="ripple-container"><div class="ripple-decorator ripple-on ripple-out" style="left: 36.2188px; top: -11px; background-color: rgba(255, 255, 255, 0.75); transform: scale(3.06575);"></div></div></a>
+            <a class="nav-item nav-link" href="index.html">Home</a>
+            <a class="nav-item nav-link active" href="portfolio.html">Projects <span class="sr-only">(current)</span><div class="ripple-container"><div class="ripple-decorator ripple-on ripple-out" style="left: 20.1875px; top: -13px; background-color: rgb(255, 255, 255); transform: scale(3.21749);"></div></div></a>
+            <a class="nav-item nav-link" href="about.html">About</a>
         </div>
     </div>
 </nav>    
