--- a/portfolio.html
+++ b/portfolio.html
@@ -35,8 +35,8 @@
    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="index.html">Home</a>
-            <a class="nav-item nav-link active" href="portfolio.html">Projects <span class="sr-only">(current)</span><div class="ripple-container"><div class="ripple-decorator ripple-on ripple-out" style="left: 20.1875px; top: -13px; background-color: rgb(255, 255, 255); transform: scale(3.21749);"></div></div></a>
-            <a class="nav-item nav-link" href="about.html">About</a>
+            <a class="nav-item nav-link active" href="portfolio.html">Projects<span class="sr-only">(current)</span><div class="ripple-container"><div class="ripple-decorator ripple-on ripple-out" style="left: 20.1875px; top: -13px; background-color: rgb(255, 255, 255); transform: scale(3.21749);"></div></div></a>
+            <a class="nav-item nav-link" href="about.html">About Me</a>
         </div>
     </div>
 </nav>    
