--- a/aboutme.html
+++ b/aboutme.html
@@ -38,7 +38,7 @@
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="index.html">Home</a>
             <a class="nav-item nav-link" href="portfolio.html">Projects</a>
-            <a class="nav-item nav-link active" href="aboutme.html">About <span class="sr-only">(current)</span><div class="ripple-container"><div class="ripple-decorator ripple-on ripple-out" style="left: 17.4375px; top: -17px; background-color: rgb(255, 255, 255); transform: scale(3.41789);"></div></div></a>
+            <a class="nav-item nav-link active" href="aboutme.html">About Me<span class="sr-only">(current)</span><div class="ripple-container"><div class="ripple-decorator ripple-on ripple-out" style="left: 17.4375px; top: -17px; background-color: rgb(255, 255, 255); transform: scale(3.41789);"></div></div></a>
         </div>
     </div>
 </nav>
