--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
       <center><img src="4th.png" alt="Code"></center>
     <h6><center>This is my image manipulation project!</center></h6>
     <center><img src="image_code.jfif" height="1080" alt="Image Code"></center>
-    <center><img src="image_manipulation.jfif" width="1890" height="1080" alt="Manipulation"></center>
+    <center><img src="image_man.jfif" alt="Manipulation"></center>
 
       </body>
 </html>
