--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
       <center><img src="3rd.png" alt="Code"></center>
       <center><img src="4th.png" alt="Code"></center>
     <h6><center>This is my image manipulation project!</center></h6>
-    <center><img src="image_code.jfif" height="1080" alt="Image Code"></center>
+    <center><img src="image_codeM.jfif" alt="Image Code"></center>
     <center><img src="image_man.jfif" alt="Manipulation"></center>
 
       </body>
