--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
       <h4><center>Here is my Repl.it Project</center></h4>
       <center><iframe height="400px" width="100%" src="https://repl.it/@Drewbacca/GameTravelTIme?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe></center>
       <embed name="all-star-by-smashmouth-but-its-sung-by-kermit.mp3" src="all-star-by-smashmouth-but-its-sung-by-kermit.mp3" loop="true" hidden="false" autostart="true">
-      <h5>Here Is My Python Game, I made Battleship. It's an 8 by 8 grid that you guess coordinates to find the ship, if you hit it, you win!</h5>
+      <h5><center>Here Is My Python Game, I made Battleship. It's an 8 by 8 grid that you guess coordinates to find the ship, if you hit it, you win!</center></h5>
       <center><img src="3rd.png" alt="Code"></center>
       <center><img src="4th.png" alt="Code"></center>
     <h6><center>This is my image manipulation project!</center></h6>
