--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 </nav>
 
     <center><h1> Hello World! </h1></center>
+    <center><img src="house.png" alt="house"></center>
 
     <canvas id="starfieldCanvas" width="1365" height="969"></canvas>
 
