--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 </nav>
 
-    <center><h1> Hello World! </h1></center>
+    <marquee><h1> Hello World! </h1></marquee>
     <center><img src="house.png" alt="house"></center>
 
     <canvas id="starfieldCanvas" width="1365" height="969"></canvas>
