--- a/aboutme.html
+++ b/aboutme.html
@@ -47,7 +47,7 @@
 <body>
 <body bgcolor="#f7f7e9">
 <h1><center><font color="gray">About Me</font></center></h1>
-<p><center>I am a sophomore in high school at rbhs. I enjoy playing soccer, I also like to travel a lot. I have 2 kittens named Loki and Milo and there so cute. I love riding rollercoasters no matter how scary they are!</center></p>
+<marquee>I am a sophomore in high school at rbhs. I enjoy playing soccer, I also like to travel a lot. I have 2 kittens named Loki and Milo and there so cute. I love riding rollercoasters no matter how scary they are!</marquee>
       
 <center><img src="water.jpg" width="1890" height="1080" alt="Water"></center>
 <center><img src="cat.jpg" width="1890" height="1080" alt="Broken"></center>
