--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 </nav>
 
-    <marquee><h1> Hello World! </h1></marquee>
+    <center><h1> Hello World! </h1></center>
     <marquee><img src="house.png" alt="house"></marquee>
     
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
