--- a/hidden.html
+++ b/hidden.html
@@ -1,4 +1,5 @@
 <h1><center>You found the secret page!</center></h1>
 <hr>
-<p>HTML Meme</p>
-<p><del>129.99</del> $99.99</p>
+<center><p>HTML Meme</p></center>
+<p> <img src="download.jfif" alt="Smiley face" align="middle"> </p>
+<center><p><del>129.99</del> $99.99</p></center>
