--- a/hidden.html
+++ b/hidden.html
@@ -1,5 +1,5 @@
 <h1><center>You found the secret page!</center></h1>
 <hr>
-<center><p>HTML Meme</p></center>
-<p> <img src="download.jfif" alt="Smiley face" align="middle"> </p>
-<center><p><del>129.99</del> $99.99</p></center>
+<center><p>Auction of the week: HTML Meme</p></center>
+<center><img src="download.jfif" alt="Smiley face"></center>
+<center><p><font color="gray"><del>129.99</del><font color="red"><strong><u>$99.99</strong></u></p></center>
