--- a/hidden.html
+++ b/hidden.html
@@ -2,4 +2,20 @@
 <hr>
 <center><p>Auction of the week: HTML Meme</p></center>
 <center><img src="download.jfif" alt="Smiley face"></center>
-<center><p><font color="gray"><del>129.99</del><font color="red"><strong><u>$99.99</strong></u></p></center>
+<center><p><font color="gray"><del>129.99</del> <font color="red"><strong><u>$99.99</strong></u></p></center>
+<center><script type="text/javascript" language="javascript">
+
+      window.onload = function() {
+          document.getElementById("Button6").onmouseover = function()
+          {
+              this.style.backgroundColor = "#9933ff";
+          }
+
+          document.getElementById("Button6").onmouseout = function()
+          {
+              this.style.backgroundColor = "#9999ff";
+          }
+      }
+
+
+  </script></center>
