--- a/hidden.html
+++ b/hidden.html
@@ -34,4 +34,4 @@
 <center><img src="download.jfif" alt="Smiley face"></center>
 <center><p><font color="gray"><del>129.99</del> <font color="red"><strong><u>$99.99</strong></u></p></center>
 <center><a href="https://drewbaccacode.github.io/index/index.html">
-<img border="0" alt="lmao" src="buy.png">
+<img border="0" alt="lmao" src="buy.png" width="300" height="138.33">
