--- a/hidden.html
+++ b/hidden.html
@@ -32,6 +32,6 @@
 <hr>
 <center><p><strong>Auction of the week: HTML Meme</strong></p></center>
 <center><img src="download.jfif" alt="Smiley face"></center>
+<br>
 <center><p><font color="gray"><del>129.99</del> <font color="red"><strong><u>$99.99</strong></u></p></center>
-<center><a href="https://drewbaccacode.github.io/index/index.html">
-<img border="0" alt="lmao" src="buy.png" width="300" height="138.33">
+<center><a href="https://drewbaccacode.github.io/index/index.html"><img border="0" alt="lmao" src="buy.png" width="300" height="138.33">
