--- a/hidden.html
+++ b/hidden.html
@@ -34,4 +34,17 @@
 <center><img src="download.jfif" alt="Smiley face"></center>
 <br>
 <center><p><font color="gray"><del>129.99</del> <font color="red"><strong><u>$99.99</strong></u></p></center>
+    <center>
+    <select name="Continent" size="1">
+  <option value="europe">Europe</option>
+  <option value="namerica">North America</option>
+  <option value="samerica">South America</option>
+  <option value="asia">Asia</option>
+  <option value="africa">Africa</option>
+  <option value="russia">Russia</option>
+</select>
+    <input type="radio" name="Select Payment" value="Cash" value="Credit Card">
+    <input type="submit" value="Submit">
+<input type="reset">
+    </center>
 <center><a href="https://drewbaccacode.github.io/index/index.html"><img border="0" alt="lmao" src="buy.png" width="300" height="138.33">
