--- a/hidden.html
+++ b/hidden.html
@@ -43,8 +43,9 @@
   <option value="africa">Africa</option>
   <option value="russia">Russia</option>
 </select>
-    <input type="radio" name="Select Payment" value="Cash" value="Credit Card">
-    <input type="submit" value="Submit">
-<input type="reset">
+    <input type="radio" name="Payment" value="Cash"> Cash<br>
+<input type="radio" name="Payment" value="Credit"> Credit<br>
+<input type="radio" name="Payment" value="Paypal"> Paypal
+
     </center>
 <center><a href="https://drewbaccacode.github.io/index/index.html"><img border="0" alt="lmao" src="buy.png" width="300" height="138.33">
