--- a/hidden.html
+++ b/hidden.html
@@ -44,9 +44,6 @@
   <option value="russia">Russia</option>
 </select>
         <br>
-    <input type="radio" name="Payment" value="Cash"> Cash<br>
-<input type="radio" name="Payment" value="Credit"> Credit<br>
-<input type="radio" name="Payment" value="Paypal"> Paypal
-<br>
+    <input type="radio" name="Payment" value="Cash"> Cash<br> <input type="radio" name="Payment" value="Credit"> Credit<br> <input type="radio" name="Payment" value="Paypal"> Paypal<br>
     </center>
 <center><a href="https://drewbaccacode.github.io/index/index.html"><img border="0" alt="lmao" src="buy.png" width="300" height="138.33">
