--- a/hidden.html
+++ b/hidden.html
@@ -35,7 +35,8 @@
 <br>
 <center><p><font color="gray"><del>129.99</del> <font color="red"><strong><u>$99.99</strong></u></p></center>
     <center>
-    <select name="Continent" size="1">
+   <form> Select Your Continent
+        <select name="Continent" size="1">
   <option value="europe">Europe</option>
   <option value="namerica">North America</option>
   <option value="samerica">South America</option>
@@ -43,7 +44,8 @@
   <option value="africa">Africa</option>
   <option value="russia">Russia</option>
 </select>
+        </form>
         <br>
     <input type="radio" name="Payment" value="Cash"> Cash<br> <input type="radio" name="Payment" value="Credit"> Credit<br> <input type="radio" name="Payment" value="Paypal"> Paypal<br>
     </center>
-<center><a href="https://drewbaccacode.github.io/index/index.html"><img border="0" alt="lmao" src="buy.png" width="300" height="138.33">
+<center><a href="https://drewbaccacode.github.io/index/index.html" input type="submit" id="submit" value="Submit" <img border="0" alt="lmao" src="buy.png" width="300" height="138.33">
