--- a/hidden.html
+++ b/hidden.html
@@ -33,8 +33,8 @@
 <center><p><strong>Auction of the week: HTML Meme</strong></p></center>
 <center><img src="download.jfif" alt="Smiley face"></center>
 <br>
-<center><p><font color="gray"><del>129.99</del> <font color="red"><strong><u>$99.99</strong></u></p></center>
-    <center>
+<center><p><font color="gray"><del>129.99</del> <font color="red"><strong><u>$99.99</strong></u></p></center></font>
+    <center><strong>
    <form> Select Your Continent
         <select name="Continent" size="1">
   <option value="europe">Europe</option>
@@ -47,5 +47,5 @@
         </form>
         <br>
     <input type="radio" name="Payment" value="Cash"> Cash<br> <input type="radio" name="Payment" value="Credit"> Credit<br> <input type="radio" name="Payment" value="Paypal"> Paypal<br>
-    </center>
-<center><a href="https://drewbaccacode.github.io/index/index.html" input type="submit" id="submit" value="Submit" <img border="0" alt="lmao" src="buy.png" width="300" height="138.33">
+        </center></strong>
+<center><a href="https://drewbaccacode.github.io/index/index.html"><img border="0" alt="lmao" src="buy.png" width="300" height="138.33">
