--- a/index.html
+++ b/index.html
@@ -43,31 +43,8 @@
 </nav>
 
     <center><h1> Hello World! </h1></center>
-    <select name=”clr” onchange=”document.bgColor=this.options[this.selectedIndex].value” size=”1″>
-    <br>
-    <option value=”black”>black
-        <option value=”orange”>orange
-            <option value=”flamingred”>fuschia
-                <option value=”lightyellow”>light yellow
-                    <option value=”green”>green
-                        <option value=”cyan”>cyan
-                            <option value=”yellow”>yellow
-                                <option value=”red”>red
-                                    <option value=”white”>white</option>
-</select>&nbsp;&nbsp;Background Color
-
-<br>
-<select name=”clr” onchange=”document.fgColor=this.options[this.selectedIndex].value” size=”1″>
-    <br>
-    <option value=”black”>black
-        <option value=”orange”>orange
-            <option value=”flamingred”>fuschia
-                <option value=”lightyellow”>light yellow
-                    <option value=”cyan”>cyan
-                        <option value=”yellow”>yellow
-                            <option value=”red”>red
-                                <option value=”white”>white</option>
-</select>&nbsp;&nbsp;Text Color
+    <meta name=”keywords” content=”DrewbaccaCode” />
+    <meta name=”description” content=”Never on the 2nd page of google :D”>
     <marquee> <a href="https://drewbaccacode.github.io/index/hidden.html">
 <img border="0" alt="house" src="house.png"></marquee>
     
