--- a/hidden.html
+++ b/hidden.html
@@ -35,6 +35,7 @@
 <br>
 <center><p><font color="gray"><del>129.99</del> <font color="red"><strong><u>$99.99</strong></u></p></center></font>
     <center><strong>
+        <p><small>* Terms and Conditions apply</small></p>
    <form> Select Your Continent
         <select name="Continent" size="1">
   <option value="europe">Europe</option>
