--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,8 @@
     <h6><center>This is my image manipulation project!</center></h6>
     <center><img src="image_codeM.jfif" alt="Image Code"></center>
     <center><img src="image_man.jfif" alt="Manipulation"></center>
-
+    <h4><center>Here is my Data project!</center></h4>
+    <center><img src="graph.PNG" alt="graph"></center>
+    <center><img src="codeofgraph.PNG" alt="code"></center>
       </body>
 </html>
