--- a/hidden.html
+++ b/hidden.html
@@ -30,10 +30,10 @@
       
     <h1><center><strong>You found the secret page!</strong></center></h1>
 <hr>
-<center><p><strong>Auction of the week: HTML Meme</strong></p></center>
-<center><img src="download.jfif" alt="Smiley face"></center>
+<center><p><strong>Auction of the week: Mona Lisa</strong></p></center>
+<center><img src="next.jfif" alt="Smiley face"></center>
 <br>
-<center><p><font color="gray"><del>129.99</del> <font color="red"><strong><u>$99.99</strong></u></p></center></font>
+<center><p><font color="gray"><del>599.99</del> <font color="red"><strong><u>$279.99</strong></u></p></center></font>
     <center><strong>
         <p><small>* Terms and Conditions apply</small></p>
    <form> Select Your Continent
@@ -43,10 +43,10 @@
   <option value="samerica">South America</option>
   <option value="asia">Asia</option>
   <option value="africa">Africa</option>
-  <option value="russia">Russia</option>
+  <option value="russia">Russia (50% off when you use code communism50)</option>
 </select>
         </form>
         <br>
-    <input type="radio" name="Payment" value="Cash"> Cash<br> <input type="radio" name="Payment" value="Credit"> Credit<br> <input type="radio" name="Payment" value="Paypal"> Paypal<br>
+    <input type="radio" name="Payment" value="Cash"> Cash<br> <input type="radio" name="Payment" value="Bitcoin"> Bitcoin<br> <input type="radio" name="Payment" value="Minecraft Diamonds"> Minecraft Diamonds<br>
         </center></strong>
 <center><a href="https://drewbaccacode.github.io/index/index.html"><img border="0" alt="lmao" src="buy.png" width="300" height="138.33">
