--- a/hidden.html
+++ b/hidden.html
@@ -51,7 +51,7 @@
         </center></strong>
 <center><a href="https://drewbaccacode.github.io/index/index.html"><img border="0" alt="lmao" src="buy.png" width="300" height="138.33">
     
-   <head>
+   <head><center>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {font-family: Arial, Helvetica, sans-serif;}
@@ -222,4 +222,4 @@ window.onclick = function(event) {
 }
 </script>
 
-</body>
+    </center></body>
