--- a/portfolio.html
+++ b/portfolio.html
@@ -57,6 +57,7 @@
     <center><img src="image_codeM.jfif" alt="Image Code"></center>
     <center><img src="image_man.jfif" alt="Manipulation"></center>
     <h2><center>Here is my Data project!</center></h2>
+    <h6><center>Im looking for which company has the higher stock price and what were the increases/decreases in the past few years.</center></h6>
     <center><img src="graph.PNG" alt="graph"></center>
     <center><img src="codeofgraph.PNG" alt="code"></center>
       </body>
