--- a/portfolio.html
+++ b/portfolio.html
@@ -60,5 +60,14 @@
     <h6><center>Im looking for which company has the higher stock price and what were the increases/decreases in the past few years.</center></h6>
     <center><img src="graph.PNG" alt="graph"></center>
     <center><img src="codeofgraph.PNG" alt="code"></center>
+    <h3>In this project I manipulated multiple variables in a simulation called slime. The things I changed include, color of the triangles, size of the triangles, and I Increased the area of the slime to the point where the whole screen was white.</h3>
+    <div id="banner" style="overflow: hidden; display: inline-block;">
+        <div class="" style="max-width: 20%; max-height: 20%;">
+            <img src ="Regular Slime.PNG">
+        </div>
+
+        <div class="" style="max-width: 100%; max-height: 100%;">
+            <img src ="Modded Slime.PNG">
+        </div>
       </body>
 </html>
