--- a/portfolio.html
+++ b/portfolio.html
@@ -61,13 +61,12 @@
     <center><img src="graph.PNG" alt="graph"></center>
     <center><img src="codeofgraph.PNG" alt="code"></center>
     <h3>In this project I manipulated multiple variables in a simulation called slime. The things I changed include, color of the triangles, size of the triangles, and I Increased the area of the slime to the point where the whole screen was white.</h3>
-    <div id="banner" style="overflow: hidden; display: inline-block;">
-        <div class="" style="max-width: 20%; max-height: 20%;">
-            <img src ="Regular Slime.PNG">
-        </div>
-
-        <div class="" style="max-width: 100%; max-height: 100%;">
-            <img src ="Modded Slime.PNG">
-        </div>
+    <div id="banner">
+    <div class="inline-block">
+        <img src ="Regular Slime.PNG">
+    </div>
+   <div class="inline-block">
+        <img src ="Modded Slime.PNG">
+    </div>
       </body>
 </html>
