--- a/hidden.html
+++ b/hidden.html
@@ -50,5 +50,6 @@
     <input type="radio" name="Payment" value="Cash"> Cash<br> <input type="radio" name="Payment" value="Bitcoin"> Bitcoin<br> <input type="radio" name="Payment" value="Minecraft Diamonds"> Minecraft Diamonds<br>
         </center></strong>
 <center><a href="https://drewbaccacode.github.io/index/index.html"><img border="0" alt="lmao" src="buy.png" width="300" height="138.33">
+    <script src="https://gist.github.com/straker/ff00b4b49669ad3dec890306d348adc4.js"></script>
     
  
