--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <center><h1> Hello World! </h1></center>
     <meta name=”keywords” content=”DrewbaccaCode” />
     <meta name=”description” content=”Never on the 2nd page of google :D”>
-    <marquee> <a href="https://drewbaccacode.github.io/index/hidden.html">
-<img border="0" alt="house" src="house.png"></marquee>
+    <a href="https://drewbaccacode.github.io/index/hidden.html">
+<img border="0" alt="house" src="house.png">
     
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
