--- a/aboutme.html
+++ b/aboutme.html
@@ -49,7 +49,8 @@
 <h1><center><font color="gray">About Me</font></center></h1>
 <marquee>I am a sophomore in high school at rbhs. I enjoy playing soccer, I also like to travel a lot. I have 2 kittens named Loki and Milo and there so cute. I love riding rollercoasters no matter how scary they are!</marquee>
       
-<center><img src="water.jpg" width="1890" height="1080" alt="Water"></center>
+<center><a href="https://drewbaccacode.github.io/index/game.html">
+<img border="0" alt="house" width="1890" height="1080" src="water.jpg"><center>
 <center><img src="cat.jpg" width="1890" height="1080" alt="Broken"></center>
 <center><img src="coaster.jpg" width="1890" height="1080" alt="Coaster"></center>
 <center><img src="face.jpg" width="1890" height="1080" alt="Face"></center>
