--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <meta name=”description” content=”Never on the 2nd page of google :D”>
     <center><a href="https://drewbaccacode.github.io/index/hidden.html">
         <img border="0" alt="house" src="world.PNG"></center>
-        <img border="0" alt="house" src="neat.PNG"></center>
+        <center><img border="0" alt="house" src="neat.PNG"></center>
     
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
